fixed spacing in case study

--- a/css/style.css
+++ b/css/style.css
@@ -386,6 +386,7 @@ footer a:hover {
 .case-study ul {
     list-style-type: disc;
     list-style-position: inside;
+    padding-top: .8rem;
 }
 
 
@@ -890,6 +891,7 @@ footer a:hover {
     grid-template-columns: minmax(1px, auto) repeat(6, minmax(30px, 100px)) minmax(1px, auto);
     grid-column-gap: 16px;
     padding-bottom: 4rem;
+    margin-top: 4.8rem;
 
 }
 
@@ -1225,7 +1227,7 @@ form {
     }
 
     .wireframes {
-        margin-top: 10.4rem;
+        margin-top: 15.2rem;
     }
 
     /*Busybus case study tablet*/
@@ -1383,6 +1385,11 @@ form {
     .roles-etc .solution {
         grid-column: 5/8;
     } */
+
+    /* .wireframes {
+        margin-top:16rem;
+    } */
+
     /*Bio desktop*/
 
     .bio-title-section p {
